# conncet_linux

./: CMakeLists.txt
shm/: 0_shm.c  1_shm.c  2_create_shm.c  3_write_shm.c  4_read_shm.c
unix_programing/chapter1/: 0_ls.c  1_file.c  2_file.c  3_thread.c  4_errno.c  6_signal.c
unix_programing/chapter3/: 0_file_read_write.c  1_fcntl.c  不带缓冲的IO.md
unix_programing/chapter4/: 0_mode_file.c  1_access.c  3_umask.c
基于Ubuntu18.04的lfs/: 配置文件系统.md
